--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring_boot?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/blogApp?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=postgres
 spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.freemarker.expose-request-attributes=true
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
